--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,13 +4,18 @@ version = "0.1.0"
 description = ""
 authors = ["Ilia Kaziamov <ilya.kazyamov@gmail.com>"]
 readme = "README.md"
-packages = [{include = "youtube_video_tags_grabber"}]
+packages = [{include = "tags_grabber"}]
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "3.8.14"
 requests = "^2.28.1"
 beautifulsoup4 = "^4.11.1"
+youtube-search-python = "^1.6.6"
 
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.2.0"
+flake8 = "^6.0.0"
 
 [build-system]
 requires = ["poetry-core"]
