--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ python = "3.8.14"
 requests = "^2.28.1"
 beautifulsoup4 = "^4.11.1"
 youtube-search-python = "^1.6.6"
+asyncio = "^3.4.3"
+aiohttp = "^3.8.3"
 
 
 [tool.poetry.group.dev.dependencies]
