--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [tool.poetry]
-name = "youtube-video-tags-grabber"
+name = "suggestions-collector"
 version = "0.1.0"
 description = ""
-authors = ["Ilia Kaziamov <ilya.kazyamov@gmail.com>"]
+authors = ["Ilia Kaziamov <kaziamov@outlook.com>"]
 readme = "README.md"
-packages = [{include = "tags_grabber"}]
+packages = [{include = "suggestions_collector"}]
 
 [tool.poetry.dependencies]
 python = "3.8.14"
@@ -18,7 +18,6 @@ grequests = "^0.6.0"
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.0"
 flake8 = "^6.0.0"
-autopep8 = "^2.0.1"
 
 [build-system]
 requires = ["poetry-core"]
