--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,12 +7,12 @@ readme = "README.md"
 packages = [{include = "suggestions_collector"}]
 
 [tool.poetry.dependencies]
-python = "3.8.14"
+python = "^3.8.1"
 beautifulsoup4 = "^4.11.1"
 youtube-search-python = "^1.6.6"
 asyncio = "^3.4.3"
 aiohttp = "^3.8.3"
-grequests = "^0.6.0"
+google-api-python-client = "^2.82.0"
 
 
 [tool.poetry.group.dev.dependencies]
